force-app/main/default/objects/Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>end date and time for the event</description>
    <inlineHelpText>enter the end date and time for the event</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>