force-app/main/default/objects/Event__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>the frequency of the event</description>
    <inlineHelpText>what is the frequency of the event</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurring__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>