force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is the show live or not</description>
    <inlineHelpText>is the show live or not live</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>