force-app/main/default/objects/Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>location of the event</description>
    <inlineHelpText>enter the event location</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Event</relationshipLabel>
    <relationshipName>Event</relationshipName>
    <type>Lookup</type>
</CustomField>