force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>location is verified or not</description>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>whether the location is verified or not</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>