force-app/main/default/objects/Event__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>organizer for the event</description>
    <inlineHelpText>the organizer of the event</inlineHelpText>
    <label>Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Event</relationshipLabel>
    <relationshipName>Event</relationshipName>
    <type>Lookup</type>
</CustomField>