force-app/main/default/objects/Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>start date and time for the event</description>
    <inlineHelpText>enter the start date for the event</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>