force-app/main/default/objects/Event__c/validationRules/End_Time_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Rule</fullName>
    <active>true</active>
    <description>End Date/Time must be at least 1 day ahead of Start Date/Time (If there is a value in the End Date/Time field)</description>
    <errorConditionFormula>End__c &lt;  Start__c + 1</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>End date and time should be 1 day ahead of start day</errorMessage>
</ValidationRule>