force-app/main/default/objects/Event__c/validationRules/Location_Selection_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Selection_Rule</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must select Location on Event Record.</description>
    <errorConditionFormula>AND (ISPICKVAL( Event_Type__c, &apos;In-Person&apos; ), ISBLANK( Location__c ))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>If Event is In-person, you need to select a Location</errorMessage>
</ValidationRule>