force-app/main/default/objects/Event__c/validationRules/Prevent_Location_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Location_Selection</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field, then Prevent User to Select Location on Event Record.</description>
    <errorConditionFormula>AND (ISPICKVAL( Event_Type__c, &apos;Virtual&apos;), NOT (ISBLANK ( Location__c )))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>If the Event Type is Virtual, you cannot select any Location.</errorMessage>
</ValidationRule>