force-app/main/default/objects/Event__c/validationRules/Recurring_Checked_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Checked_Rule</fullName>
    <active>true</active>
    <description>If Recurring? checkbox is checked then user must need to fill Frequency field.</description>
    <errorConditionFormula>AND( Recurring__c,   ISPICKVAL( Frequency__c , &apos;&apos;) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>If the event is recurring, you need to fill in the frequency field</errorMessage>
</ValidationRule>