force-app/main/default/objects/Event__c/validationRules/Recurring_Unchecked_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Unchecked_Rule</fullName>
    <active>true</active>
    <description>If checkbox is unchecked then User cannot select Frequency field.</description>
    <errorConditionFormula>AND( NOT (Recurring__c) ,   NOT( ISPICKVAL( Frequency__c , &apos;&apos;) )  )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>If checkbox is unchecked then you cannot select Frequency field.</errorMessage>
</ValidationRule>